--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -101,7 +101,7 @@
                                             dateFormat: 'dd/mm/yy'
                                         }
                                    },
-                                   valueUpdate: 'blur',
+                                   valueUpdate: 'change',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
                                    name="payment[buckaroo_magento2_afterpay2][customer_DoB]">
