--- a/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
@@ -1,4 +1,4 @@
-<div class="buckaroo_magento2_klarna payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_klarnakp payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio"
                name="payment[method]"
@@ -23,7 +23,7 @@
                 <div class="control">
                     <ul id="Saluation">
                         <li>
-                            <input type="radio" id="buckaroo_magento2_klarna_genderSelectMan"
+                            <input type="radio" id="buckaroo_magento2_klarnakp_genderSelectMan"
                                    data-bind="
                                            value: '1',
                                            click: setSelectedGender.bind($data, '1'),
@@ -31,11 +31,11 @@
                                            checked: genderValidate
                                            "
                                    class="field"
-                                   name="payment[buckaroo_magento2_klarna][customer_gender]">
-                            <label for="buckaroo_magento2_klarna_genderSelectMan"> <span data-bind="i18n: 'Mr.' "> </span> </label>
+                                   name="payment[buckaroo_magento2_klarnakp][customer_gender]">
+                            <label for="buckaroo_magento2_klarnakp_genderSelectMan"> <span data-bind="i18n: 'Mr.' "> </span> </label>
                         </li>
                         <li>
-                            <input type="radio" id="buckaroo_magento2_klarna_genderSelectWoman"
+                            <input type="radio" id="buckaroo_magento2_klarnakp_genderSelectWoman"
                                    data-bind="
                                            value: '2',
                                            click: setSelectedGender.bind($data, '2'),
@@ -43,8 +43,8 @@
                                            checked: genderValidate
                                             "
                                    class="field"
-                                   name="payment[buckaroo_magento2_klarna][customer_gender]">
-                            <label for="buckaroo_magento2_klarna_genderSelectWoman"> <span data-bind="i18n: 'Mrs.' "> </span> </label>
+                                   name="payment[buckaroo_magento2_klarnakp][customer_gender]">
+                            <label for="buckaroo_magento2_klarnakp_genderSelectWoman"> <span data-bind="i18n: 'Mrs.' "> </span> </label>
                         </li>
                     </ul>
                     <div for="gender" generated="true" class="mage-error" id="gender-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
@@ -53,15 +53,15 @@
 
 
             <div class="field required">
-                <label class="label" for="buckaroo_magento2_klarna_BillingName"> <span data-bind="i18n: 'Billing Name:'"> </span> </label>
+                <label class="label" for="buckaroo_magento2_klarnakp_BillingName"> <span data-bind="i18n: 'Billing Name:'"> </span> </label>
                 <div class="control">
-                    <input id="buckaroo_magento2_klarna_BillingName"
+                    <input id="buckaroo_magento2_klarnakp_BillingName"
                            class="input-text field"
                            type="text"
                            data-bind="
                                    value: BillingName,
                                    textInput: CustomerName()"
-                           name="payment[buckaroo_magento2_klarna][customer_billingName]"
+                           name="payment[buckaroo_magento2_klarnakp][customer_billingName]"
                            disabled >
                 </div>
             </div>
@@ -69,26 +69,26 @@
 
                         <!-- ko ifnot: hasTelephoneNumber -->
                         <div class="field required" >
-                                <label class="label" for="buckaroo_magento2_klarna_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
+                                <label class="label" for="buckaroo_magento2_klarnakp_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
                                 <div class="control">
-                                    <input id="buckaroo_magento2_klarna_Telephone"
+                                    <input id="buckaroo_magento2_klarnakp_Telephone"
                                            type="text"
                                            class="input-text field"
                                            data-bind="
                                        valueUpdate: 'keyup',
                                        value: telephoneNumber,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true })}"
-                                           name="payment[buckaroo_magento2_klarna][customer_telephone]">
+                                           name="payment[buckaroo_magento2_klarnakp][customer_telephone]">
                                 </div>
                         </div>
                         <!-- /ko -->
 
                         <div class="field required">
-                            <label class="label" for="buckaroo_magento2_klarna_DoB"> <span
+                            <label class="label" for="buckaroo_magento2_klarnakp_DoB"> <span
                                     data-bind="i18n: 'Date of Birth:'"> </span> </label>
                             <span><sup data-bind="i18n: '(DD/MM/YYYY)' "></sup></span>
                             <div class="control">
-                                <input id="buckaroo_magento2_klarna_DoB"
+                                <input id="buckaroo_magento2_klarnakp_DoB"
                                        class="field"
                                        type="text"
                                        data-bind="
@@ -101,10 +101,10 @@
                                             dateFormat: 'dd/mm/yy'
                                         }
                                    },
-                                   valueUpdate: 'blur',
+                                   valueUpdate: 'change',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
-                                       name="payment[buckaroo_magento2_klarna][customer_DoB]">
+                                       name="payment[buckaroo_magento2_klarnakp][customer_DoB]">
                             </div>
 
                             <div class="control">
@@ -116,8 +116,8 @@
                                                  ">
                                     </a>
                                 </span>
-                                <div for="buckaroo_magento2_klarna_TermsCondition" generated="true" class="mage-error"
-                                     id="buckaroo_magento2_klarna_TermsCondition-error" style="display: none;"><span
+                                <div for="buckaroo_magento2_klarnakp_TermsCondition" generated="true" class="mage-error"
+                                     id="buckaroo_magento2_klarnakp_TermsCondition-error" style="display: none;"><span
                                         data-bind="i18n: 'This is a required field.' "></span></div>
                             </div>
                         </div>
