HP-165 Afterpay20 'showNLBEFields' breaks telephone field

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -97,7 +97,7 @@
                                    type="text"
                                    class="input-text field"
                                    data-bind="
-                                   valueUpdate: 'keyup',
+                                   valueUpdate: 'blur',
                                    value: telephoneNumber,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true })}"
                                    name="payment[buckaroo_magento2_afterpay20][customer_telephone]">
