--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -1,3 +1,4 @@
+<!-- ko if: isGroupGiftcards() -->
 <div class="buckaroo_magento2_giftcards payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio"
@@ -47,3 +48,64 @@
         <!--/ko-->
     </div>
 </div>
+
+<!-- /ko -->
+
+<!-- ko ifnot: isGroupGiftcards() -->
+
+    <div data-bind="foreach: { data: allgiftcards, as: 'giftcard', noChildContext: true }">
+    <div data-bind="attr: { 'class': 'payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.getGiftcardType() == code)}">
+
+        <div class="payment-method-title field choice">
+            <input type="radio"
+                   name="payment[method]"
+                   class="radio"
+                   data-bind="attr: {'id': code, 'data-method': 'buckaroo_magento2_giftcards'}, value: code,  click: $parent.selectGiftCardPaymentMethod.bind($parent, code), checked: $parent.isChecked, visible: $parent.isRadioButtonVisible()"/>
+            <label class="buckaroo_magento2_image_title label" data-bind="attr: {'for': code }" ><span data-bind="text: title"></span></label>
+        </div>
+
+        <div class="payment-method-content">
+            <!-- ko foreach: $parent.getRegion('messages') -->
+            <!-- ko template: getTemplate() --><!-- /ko -->
+            <!--/ko-->
+
+            <div class="payment-method-billing-address">
+            <!-- ko foreach: $parents[1].getRegion($parent.getBillingAddressFormName()).bind($parent) -->
+                    <!-- ko if: $parent = $parents[1] -->
+                        <!-- ko template: getTemplate()--><!-- /ko -->
+                    <!--/ko-->
+                <!--/ko-->
+            </div>
+
+            <div class="checkout-agreements-block">
+                <!-- ko foreach: $parent.getRegion('before-place-order') -->
+                <!-- ko template: getTemplate() --><!-- /ko -->
+                <!--/ko-->
+            </div>
+
+            <div class="actions-toolbar">
+                <div class="primary">
+                    <button class="action primary checkout"
+                            type="submit"
+                            data-bind="
+                            click: $parent.placeOrder.bind($parent),
+                            attr: {title: $t('Place Order')},
+                            enable: ($parent.getCode() == $parent.isChecked()),
+                            css: {disabled: !$parent.isPlaceOrderActionAllowed() }
+                            "
+                            disabled>
+                        <span data-bind="i18n: 'Place Order'"></span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- ko if: $parent.payWithBaseCurrency() -->
+            <div class="buckaroo_magento2_currency-notification">
+                <span data-bind="text: $parent.getPayWithBaseCurrencyText()"></span>
+            </div>
+            <!--/ko-->
+        </div>
+    </div>
+    </div>
+
+<!-- /ko -->
