--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -333,6 +333,18 @@
     content: ' ';
 }
 
+/* ===================== Trustly ======================= */
+.buckaroo_magento2_trustly .buckaroo_magento2_image_title:after {
+    background: url(../images/buckaroo_magento2_trustly_title.png) no-repeat;
+    margin-top: -1px;
+    float:right;
+    margin-right: 10px;
+    background-size: auto 24px;
+    width: 80px;
+    height: 45px;
+    content: ' ';
+}
+
 /* ===================== Giropay ============================== */
 .buckaroo_magento2_giropay .buckaroo_magento2_image_title:after {
     background: url(../images/buckaroo_magento2_giropay_title.png) no-repeat;
@@ -741,6 +753,18 @@
         background-size: auto 24px;
         width: 30px;
         height: 30px;
+        content: ' ';
+    }
+
+    /* Trustly */
+    .buckaroo_magento2_trustly .buckaroo_magento2_image_title:before {
+        background: url(../images/buckaroo_magento2_trustly_title.png) no-repeat;
+        margin-top: 1px;
+        float: right;
+        margin-right: -59px;
+        background-size: auto 24px;
+        width: 80px;
+        height: 45px;
         content: ' ';
     }
 
