BP-120 Magento 2 - BirthtDate AfterPay pre-validation

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -128,6 +128,7 @@
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
                                    name="payment[buckaroo_magento2_afterpay20][customer_DoB]">
+                            <div for="buckaroo_magento2_afterpay20_DoB" generated="true" class="mage-error" id="buckaroo_magento2_afterpay20_DoB-error" style="display: none;"><span data-bind="i18n: 'You should be at least 18 years old.' "></span></div>
                         </div>
                     </div>
                     <!-- /ko -->
