BP-135 Magento 2 - Javascript error when using Apple Pay #16

--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -33,11 +33,10 @@
         window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
         window.customerData = window.checkoutConfig.customerData;
     }
-
-    require(['jquery', 'buckaroo/applepay/checkout-cart'], function (jQuery, applepayPay) {
-        showPayButton = function() {
-            applepayPay.showPayButton();
-        }
-    });
+    showPayButton = function() {
+        require(['jquery', 'buckaroo/applepay/checkout-cart'], function (jQuery, applepayPay) {
+            //applepayPay.showPayButton();
+        });
+    }
 </script>
 <?php endif; ?>
