BP-89 Magento 2 - Apple Pay button on product page and shopping cart

--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -19,10 +19,10 @@
  -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="product.info.form.content">
-<!--            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay" name="buckaroo_magento2.product.info.applepay"-->
-<!--                   after="product.info.addtocart" template="Buckaroo_Magento2::catalog/product/view/applepay.phtml">-->
-<!--            </block>-->
+        <referenceContainer name="product.info.main">
+            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay" name="buckaroo_magento2.product.info.applepay"
+                   before="product.info.extrahint" template="Buckaroo_Magento2::catalog/product/view/applepay.phtml">
+            </block>
         </referenceContainer>
     </body>
 </page>
