--- a/view/frontend/web/template/catalog/product/view/applepay.html
+++ b/view/frontend/web/template/catalog/product/view/applepay.html
@@ -1,7 +1,7 @@
 <div class="box-tocart">
     <div class="fieldset">
         <div class="actions">
-            <div id="apple-pay-wrapper" data-bind="afterRender: showPayButton, click: addProductToCart"></div>
+            <div id="apple-pay-wrapper" data-bind="afterRender: showPayButton"></div>
         </div>
     </div>
 </div>
