BP-89 Magento 2 - Apple Pay button on product page and shopping cart

--- a/view/frontend/templates/catalog/product/view/applepay.phtml
+++ b/view/frontend/templates/catalog/product/view/applepay.phtml
@@ -23,10 +23,8 @@
 
     <script>
         if ('undefined' === typeof window.checkoutConfig) {
-            // window.checkoutConfig = {};
             window.checkoutConfig = <?php echo $this->getApplepayConfig(); ?>;
-            // window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
-            // window.customerData = window.checkoutConfig.customerData;
+            window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
         }
     </script>
 
