--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -18,7 +18,7 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
-<?php if(false && $this->canShowButton()): ?>
+<?php if($this->canShowButton()): ?>
 <div class="box-tocart">
     <div class="fieldset">
         <div class="actions">
@@ -31,12 +31,11 @@
     if ('undefined' === typeof window.checkoutConfig) {
         window.checkoutConfig = <?php echo $this->getCheckoutConfig(); ?>;
         window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
-        window.customerData = window.checkoutConfig.customerData;
     }
     showPayButton = function() {
         require(['jquery', 'buckaroo/applepay/checkout-cart'], function (jQuery, applepayPay) {
             console.log('==============checkout-cart/1', window.checkoutConfig); //ZAK
-            //applepayPay.showPayButton();
+            applepayPay.showPayButton();
         });
     }
 </script>
