BP-127 Magento 2 - Afterpay Datepicker bug

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -124,7 +124,7 @@
                                             dateFormat: 'dd/mm/yy'
                                         }
                                    },
-                                   valueUpdate: 'blur',
+                                   valueUpdate: 'change',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
                                    name="payment[buckaroo_magento2_afterpay20][customer_DoB]">
