--- a/view/adminhtml/layout/sales_order_creditmemo_new.xml
+++ b/view/adminhtml/layout/sales_order_creditmemo_new.xml
@@ -27,7 +27,11 @@
     <body>
         <referenceBlock name="creditmemo_totals">
             <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Totals" name="buckaroo_fee"/>
+            <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Totals" name="buckaroo_already_paid"
+                template="Buckaroo_Magento2::sales/order/creditmemo/buckaroo_already_paid.phtml"
+                />
         </referenceBlock>
+        <move element="buckaroo_already_paid" destination="creditmemo_totals" after="creditmemo_totals" />
         <referenceContainer name="submit_before">
             <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Order\Creditmemo\Create\RoundingWarning" name="buckaroo_rounding_warning" template="Buckaroo_Magento2::sales/order/creditmemo/create/rounding_warning.phtml"/>
         </referenceContainer>
