--- a/view/adminhtml/layout/sales_order_creditmemo_view.xml
+++ b/view/adminhtml/layout/sales_order_creditmemo_view.xml
@@ -27,6 +27,9 @@
     <body>
         <referenceBlock name="creditmemo_totals">
             <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Totals" name="buckaroo_fee"/>
+            <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Totals" name="buckaroo_already_paid"
+                template="Buckaroo_Magento2::sales/order/creditmemo/buckaroo_already_paid.phtml"
+                />
         </referenceBlock>
     </body>
 </page>
