--- a/view/frontend/web/template/summary/buckaroo_fee.html
+++ b/view/frontend/web/template/summary/buckaroo_fee.html
@@ -31,7 +31,18 @@
 <!-- /ko -->
 <!-- /ko -->
 
-<!-- ko if: getAlreadyPayValue() -->
+<!-- ko if: typeof getAlreadyPayValue() === 'object' -->
+<!-- ko foreach: getAlreadyPayValue() -->
+<tr class="totals buckaroo_already_paid">
+    <th class="mark">
+        <span data-bind="{text: label}"></span>
+    </th>
+    <td data-bind="{text: amount}" class="amount"></td>
+</tr>
+<!-- /ko -->
+<!-- /ko -->
+
+<!-- ko if: getAlreadyPayValue() && (typeof getAlreadyPayValue() !== 'object') -->
 <tr class="totals buckaroo_already_paid">
     <th class="mark">
         <span data-bind="{text: getAlreadyPayTitle()}"></span>
