BP-193 Magento 2 - Giftcard: Show which methodes are used in order over

--- a/view/adminhtml/templates/info/payment_method.phtml
+++ b/view/adminhtml/templates/info/payment_method.phtml
@@ -28,3 +28,13 @@
 <div class="buckaroo_magento2_payment_<?php echo $block->escapeHtml($method->buckarooPaymentMethodCode); ?>">
     <?php echo $block->escapeHtml($block->getMethod()->getTitle()) ?>
 </div>
+<?php
+    if ($giftCards = $block->getGiftCards()) {
+        foreach ($giftCards as $giftCard) { ?>
+            <div class="buckaroo_magento2_payment_<?php echo $block->escapeHtml($giftCard['code']); ?>">
+                <?php echo $block->escapeHtml($giftCard['label']) ?>
+            </div>
+<?php
+        }
+    }
+?>
