BP-185 fix icons

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -370,14 +370,25 @@
 }
 
 /* ===================== All Giftcards ============================ */
-.buckaroo_magento2_ajaxgiftcard .buckaroo_magento2_image_title:after {
-    background: url(../images/buckaroo_magento2_ajaxgiftcard_title.png) no-repeat;
+.buckaroo_magento2_giftcards_group .buckaroo_magento2_image_title:after {
+    background: url(../images/buckaroo_magento2_giftcards_title.png) no-repeat;
     float: right;
-    margin-right: 10px;
+    margin-right: 5px;
     margin-top: -2px;
-    background-size: auto 25px;
-    width: 108px;
-    height: 25px;
+    background-size: auto 32px;
+    width: 50px;
+    height: 32px;
+    content: ' ';
+}
+
+.buckaroo_magento2_ajaxgiftcard .buckaroo_magento2_image_title:after {
+    background: url(../images/buckaroo_magento2_giftcards_title.png) no-repeat;
+    float: right;
+    margin-right: 5px;
+    margin-top: -2px;
+    background-size: auto 32px;
+    width: 50px;
+    height: 32px;
     content: ' ';
 }
 
