--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -1,5 +1,5 @@
 <!-- ko if: isGroupGiftcards() -->
-<div class="buckaroo_magento2_giftcards payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_giftcards buckaroo_magento2_giftcards_group payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio"
                name="payment[method]"
