BP-193 Magento 2 - Giftcard: Show which methodes are used in order over

--- a/view/adminhtml/templates/info/creditcard.phtml
+++ b/view/adminhtml/templates/info/creditcard.phtml
@@ -24,6 +24,16 @@
  */
 ?>
 <?php /** @var \Buckaroo\Magento2\Model\Method\AbstractMethod $method */ ?>
+<?php
+if ($giftCards = $block->getGiftCards()) {
+    foreach ($giftCards as $giftCard) { ?>
+        <div class="buckaroo_magento2_payment_<?php echo $block->escapeHtml($giftCard['code']); ?>">
+            <?php echo $block->escapeHtml($giftCard['label']) ?>
+        </div>
+        <?php
+    }
+}
+?>
 <?php $method = $block->getMethod(); ?>
 <div class="buckaroo_magento2_payment_<?php echo $block->escapeHtml($method->buckarooPaymentMethodCode); ?>">
     <?php echo $block->escapeHtml($block->getMethod()->getTitle()) ?>
