issues/27 closed div

--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -127,6 +127,8 @@
                         <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' "></span>
                         <span class="apply-gift-card action primary" data-bind="click: $parent.applyGiftcard.bind($parent), i18n: 'Apply Gift Card', css: {disabled: $parent.buttoncheck()}"></span>
                     </div>
+                    
+                    </div>
                 </fieldset>
             </form>
         </div>
