--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -1,4 +1,4 @@
-<!-- ko if: isGroupGiftcards() -->
+<!-- ko if: isGiftcardsRedirectMode() -->
 <div class="buckaroo_magento2_giftcards buckaroo_magento2_giftcards_group payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio"
@@ -51,10 +51,10 @@
 
 <!-- /ko -->
 
-<!-- ko ifnot: isGroupGiftcards() -->
+<!-- ko ifnot: isGiftcardsRedirectMode() -->
 
     <div data-bind="foreach: { data: allgiftcards, as: 'giftcard', noChildContext: true }">
-    <div data-bind="attr: { 'class': 'buckaroo_magento2_allgiftcards payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.getGiftcardType() == code)}">
+    <div data-bind="attr: { 'class': 'buckaroo_magento2_all_giftcard payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.getGiftcardType() == code)}">
 
         <div class="payment-method-title field choice">
             <input type="radio"
@@ -134,8 +134,10 @@
         </div>
 
             <div class="checkout-agreements-block">
-                <!-- ko foreach: $parent.getRegion('before-place-order') -->
-                <!-- ko template: getTemplate() --><!-- /ko -->
+                <!-- ko foreach: $parents[1].getRegion('before-place-order') -->
+                    <!-- ko if: $parent = $parents[1] -->
+                        <!-- ko template: getTemplate() --><!-- /ko -->
+                     <!--/ko-->
                 <!--/ko-->
             </div>
 
