--- a/view/frontend/templates/catalog/product/view/applepay.phtml
+++ b/view/frontend/templates/catalog/product/view/applepay.phtml
@@ -18,6 +18,7 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
+<?php if($this->canShowProductButton()): ?>
 <div id="apple-pay-catalog-product-view-component" data-bind="scope:'applepayproductcomponent'">
     <!-- ko template: getTemplate() --><!-- /ko -->
 
@@ -43,3 +44,4 @@
         }
     </script>
 </div>
+<?php endif; ?>
