--- a/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee.phtml
+++ b/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee.phtml
@@ -21,21 +21,36 @@
 // @codingStandardsIgnoreFile
 
 ?>
-<div class="admin__field admin__field-option field-refund-reward-points">
-    <input type="checkbox" class="admin__control-checkbox" name="creditmemo[refund_reward_points_enable]" value="1" id="creditmemo_refund_reward_points_enable">
-    <label for="creditmemo_refund_reward_points_enable" class="admin__field-label"><span><?php /* @escapeNotVerified */ echo __('Refund Reward Points') ?></span></label>
-    <input type="text" class="input-text admin__control-text not-negative-amount" name="creditmemo[refund_reward_points]" value="<?php /* @escapeNotVerified */ echo $block->getBuckarooFeeToRefund() ?>" id="creditmemo_refund_reward_points">
-    <script>
-        require(['prototype'], function(){
 
-                //<![CDATA[
-                    toggleRewardPointsRefundAmount = function() {
-                        $('creditmemo_refund_reward_points').disabled = !$('creditmemo_refund_reward_points_enable').checked;
-                    };
-                    Event.observe($('creditmemo_refund_reward_points_enable'), 'change', toggleRewardPointsRefundAmount);
-                    toggleRewardPointsRefundAmount();
-                //]]>
+<?php foreach ($block->getTotals() as $_code => $_total): ?>
+    <?php if (isset($_total['block_name']) && $_total['block_name'] == 'buckaroo_fee'): ?>
+        <tr>
+            <td class="label"><?= $_total['label'] ?>
+                <div id="buckaroo_fee_adv">
+                </div>
+            </td>
+            <td>
+                <span class="price"><?php echo $block->getCurrentCurrencySymbol() . abs($_total['value']) ?></span>
+            </td>
+        </tr>
+    <?php endif?>
+<?php endforeach?>
 
-        });
-    </script>
-</div>
+<!--<div class="admin__field admin__field-option field-refund-reward-points">-->
+<!--    <input type="checkbox" class="admin__control-checkbox" name="creditmemo[refund_reward_points_enable]" value="1" id="creditmemo_refund_reward_points_enable">-->
+<!--    <label for="creditmemo_refund_reward_points_enable" class="admin__field-label"><span>--><?php ///* @escapeNotVerified */ echo __('Refund Reward Points') ?><!--</span></label>-->
+<!--    <input type="text" class="input-text admin__control-text not-negative-amount" name="creditmemo[refund_reward_points]" value="--><?php ///* @escapeNotVerified */ echo $block->getBuckarooFeeToRefund() ?><!--" id="creditmemo_refund_reward_points">-->
+<!--    <script>-->
+<!--        require(['prototype'], function(){-->
+<!---->
+<!--                //<![CDATA[-->
+<!--                    toggleRewardPointsRefundAmount = function() {-->
+<!--                        $('creditmemo_refund_reward_points').disabled = !$('creditmemo_refund_reward_points_enable').checked;-->
+<!--                    };-->
+<!--                    Event.observe($('creditmemo_refund_reward_points_enable'), 'change', toggleRewardPointsRefundAmount);-->
+<!--                    toggleRewardPointsRefundAmount();-->
+<!--                //]]>-->
+<!---->
+<!--        });-->
+<!--    </script>-->
+<!--</div>-->
