--- a/view/adminhtml/layout/sales_order_view.xml
+++ b/view/adminhtml/layout/sales_order_view.xml
@@ -27,6 +27,9 @@
     <body>
         <referenceBlock name="order_totals">
             <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Totals" name="buckaroo_fee_totals"/>
+            <block class="Buckaroo\Magento2\Block\Adminhtml\Sales\Totals" name="buckaroo_fee"
+                   template="Buckaroo_Magento2::sales/order/creditmemo/buckaroo_fee.phtml"
+            />
         </referenceBlock>
 
     </body>
